testcases/error/referring_before_definition.veryl
module referring_before_definition {
    let _a: logic = b;
    let b : logic = 1;
}
